Thu Jul  1 16:22:19 1999  Anthony Green  <green@cygnus.com>

	* libjava.mauve/mauve.exp: Don't stop counting test results
 	prematurely.

1999-06-23  Tom Tromey  <tromey@cygnus.com>

	* lib/libjava.exp (libjava_arguments): Handle -lzgcj.

1999-05-24  Anthony Green  <green@cygnus.com>

	* libjava.lang/Shazam.java: New file.
	libjava.lang/Shazam.out: New file.

1999-05-12  Andrew Haley  <aph@cygnus.com>

	* libjava.lang/Invoke_2.java: New file.

1999-05-03  Tom Tromey  <tromey@cygnus.com>

	* lib/libjava.exp (libjava_arguments): Don't use -nodefaultlibs.
	(libjava_find_lib): Add `-L' option to find the actual library.

	* libjava.mauve/mauve.exp (test_mauve): Pass `link' to
	libjava_arguments when linking.
	(test_mauve_sim): Likewise.
	* lib/libjava.exp (libjava_arguments): Run `libtool' to link.
	Don't use `-static'.  Added `mode' argument.  Use -nodefaultlibs
	when linking.
	(test_libjava_from_source): Mention why target_compile failed.
	Pass `link' to libjava_arguments when linking.  Only do `xfails'
	for tests we would actually have run.
	(test_libjava_from_javac): Likewise.
	(libjava_find_lib): Return name of `.la' file.

1999-04-26  Tom Tromey  <tromey@cygnus.com>

	* lib/libjava.exp (libjava_find_lib): New proc.
	(libjava_arguments): Use it.  Force static linking.

Thu Apr 22 14:19:35 1999  Anthony Green  <green@cygnus.com>

	* libjava.compile/OperatorBenchmark.java: New file.

1999-04-09  Warren Levy  <warrenl@cygnus.com>

	* libjava.mauve/mauve.exp (KEYS): Default to libgcj.

1999-04-09  Tom Tromey  <tromey@cygnus.com>

	* libjava.compile/plusplus.java: New file.
	From MoT <Sebastien.Villemot@ens.fr>.

1999-04-06  Tom Tromey  <tromey@cygnus.com>

	* libjava.mauve/mauve.exp (test_mauve_sim): Reference
	mauve-libgcj.
	(test_mauve): Likewise.

1999-03-30  Tom Tromey  <tromey@cygnus.com>

	* libjava.mauve/mauve.exp: Renamed from test.exp.  With the new
	name it is easier to run just the Mauve tests.
