@@ -1,10 +1,0 @@
-test 0
-daemon done
-joined
-active count = 2
-test 1
-true
-still alive: false
-test 2
-interrupted
-test 3
