@@ -1,3 +1,8 @@
+1999-07-02  Tom Tromey  <tromey@cygnus.com>
+
+	* libjava.lang/Thread_1.out: Updated.
+	* libjava.lang/Thread_1.java: Don't run exit test.
+
 Thu Jul  1 16:22:19 1999  Anthony Green  <green@cygnus.com>
 
 	* libjava.mauve/mauve.exp: Don't stop counting test results
